@@ -1,3 +1,4 @@
+ - Added protection against infinite AIML recursion.
  - Removed the deprecated Kernel.getBotName and Kernel.setBotName functions.
 
 version 0.8.1:
